<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flocking</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="start_game">Prepare your flapper</string>
    <string name="ostrich">Ostrich</string>
    <string name="bananaquit">Bananaquit</string>
    <string name="parrot">Parrot</string>
    <string name="robin">Robin</string>
    <string name="swallow">Swallow</string>
    <string name="selectBird">Select your bird</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="player_one">Player 1: </string>
    <string name="player_two">Player 2: </string>
    <string name="input_name">Your Name Here</string>
    <string name="place_button">Place</string>
    <string name="game_title">The Flocking Game</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="reset">Reset</string>
    <string name="rules">Rules</string>
    <string name="display_rules">Display Rules</string>
    <string name="rules_text">To begin the game, the device will present a bird selection screen for the first player.
While holding the device so the other player cannot see, she will select a bird from 5 different birds.
When the bird is selected, the process repeats for the second player. They, too, select a bird.
On the next screen, there is a square view where game play occurs.
The first player\'s bird appears in the middle of that square. The player can then move the bird.
When the player is happy with the bird location, they click the place button.
At this point, if the bird is overlapping any other bird or extends outside the playing space, the player loses and the game is over.
If the player successfully places the bird, the second players bird appears and he moves it to place, then clicks the button. Again, the game tests to see if this bird is overlapping any other bird or extends outside the playing space. If it does, the player loses and the game is over.
This ends a round. For the second round, the birds from the first round are still on the screen and the order the players go in reverse.</string>

</resources>
