<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selectBird"
        android:id="@+id/Message"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/Robin"
        android:layout_weight=".5"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/robin"
            android:id="@+id/RobinText"
            android:layout_gravity="left|center_vertical" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/robin"
            android:src="@drawable/robin"
            android:contentDescription="@string/robin"
            android:layout_gravity="center" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/Parrot"
        android:layout_weight="1"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/parrot"
            android:id="@+id/ParrotText"
            android:layout_gravity="left|center_vertical" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parrot"
            android:src="@drawable/parrot"
            android:contentDescription="@string/parrot"
            android:layout_gravity="center" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/Swallow"
        android:layout_weight=".5"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/swallow"
            android:id="@+id/SwallowText"
            android:layout_gravity="left|center_vertical" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swallow"
            android:src="@drawable/swallow"
            android:contentDescription="@string/swallow"
            android:layout_gravity="center" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/Bananaquit"
        android:layout_weight=".5"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bananaquit"
            android:id="@+id/BananaText"
            android:layout_gravity="left|center_vertical" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/banana"
            android:src="@drawable/bananaquit"
            android:contentDescription="@string/bananaquit"
            android:layout_gravity="center" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/Ostrich"
        android:layout_weight="2"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ostrich"
            android:id="@+id/OstrichText"
            android:layout_gravity="left|center_vertical" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ostrich"
            android:src="@drawable/ostrich"
            android:layout_gravity="center"
            android:contentDescription="@string/ostrich" />
    </FrameLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:id="@+id/BirdRadioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RadioSelectRobin"
            android:text="@string/robin"
            android:layout_gravity="left|center_vertical" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parrot"
            android:id="@+id/RadioSelectParrot"
            android:layout_gravity="left|center_vertical" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swallow"
            android:id="@+id/RadioSelectSwallow"
            android:layout_gravity="left|center_vertical" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bananaquit"
            android:id="@+id/RadioSelectBanana"
            android:layout_gravity="left|center_vertical" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ostrich"
            android:id="@+id/RadioSelectOstrich"
            android:layout_gravity="center_vertical" />
    </RadioGroup>

</LinearLayout>